fix: realign index text block

--- a/src/css/pages/_index.scss
+++ b/src/css/pages/_index.scss
@@ -44,7 +44,7 @@
   margin-bottom: 20px;
 
   @include breakpoint(md) {
-    height: 640px;
+    height: 610px;
     margin-bottom: 0;
   }
 }
